--- a/pages/ora.mdx
+++ b/pages/ora.mdx
@@ -2,5 +2,18 @@ import { Callout } from "nextra-theme-docs";
 
 # Working With ORA Files
 
+ORA files are also zip files, making it easy to extract the contents and work with them. Simply change the file extension to `.zip` and use the file explorer to see the contents of the ORA file.
+
+<br></br>
+<video loop autoPlay muted>
+    <source src="videos/ora_zip.mp4" type="video/mp4"></source>
+</video>
+
+The `stack.xml` file contains the metadata for the images, such as pixel offsets and layer names. The `data` folder contains the actual image data, which is stored as PNG files.
+
+## Reference Projects
+
+https://gitlab.com/inklabapp/jsora
+
 --- 
 
